--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1,6 +1,6 @@
 # Week7~10 🌲算
 
-Updated 1615 GMT+8 Oct 20, 2025
+Updated 1824 GMT+8 Oct 27, 2025
 
 2025 spring, Complied by Hongfei Yan
 
@@ -960,6 +960,7 @@ Q. 设森林F中有4棵树，第1、2、3、4棵树的结点个数分别为10、
 使用类（class）来定义树的节点。每个节点包含三个属性：节点的值 (`val`)、指向左子节点的引用 (`left`) 和指向右子节点的引用 (`right`)。
 
 ```python
+# Definition for a binary tree node.
 class TreeNode:
     def __init__(self, val=0, left=None, right=None):
         self.val = val
@@ -2622,8 +2623,8 @@ def build_tree(arr, n): # Build tree in tree in O(n)
         if (arr[i] == -1): # if root node, store index
             root_index = i
         else:
-            adj[i].append(arr[i])
-            adj[arr[i]].append(i)
+            adj[i].append(arr[i])	# 子 -> 父
+            adj[arr[i]].append(i)	# 父 -> 子
 
     return root_index
 
@@ -2665,6 +2666,8 @@ if __name__ == '__main__':
 # output: Height of N-ary Tree = 4
 
 ```
+
+> **建无向边是为了“懒”——省去显式找子节点的步骤，靠 BFS 的 `vis` 来控制方向。**
 
 **Time Complexity:** O(n) which converges to O(n) for very large n.
 **Auxiliary Space:** O(n), we are using an <mark>adjacency list</mark> to store the tree in memory. The size of the adjacency list is proportional to the number of nodes in the tree, so the space complexity of the algorithm is O(n).
@@ -4892,7 +4895,7 @@ def delete(self):
 
 > 如果从完整的列表开始，构建整个堆只需O(n) ，https://oi-wiki.org/ds/binary-heap/ 有证明。
 >
-> 注意到叶节点无需调整，因此可从序列约 ![n/2](data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7) 的位置开始调整，可减少部分常数但不影响复杂度。之所以能 ![O(n)](data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7) 建堆，是因为堆性质很弱，二叉堆并不是唯一的。要是像排序那样的强条件就难说了。
+> 注意到叶节点无需调整，因此可从序列约 n/2 的位置开始调整，可减少部分常数但不影响复杂度。之所以能 O(n) 建堆，是因为堆性质很弱，二叉堆并不是唯一的。要是像排序那样的强条件就难说了。
 
 代码清单6
 
