--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1,6 +1,6 @@
 # Week7~10 🌲算
 
-Updated 1824 GMT+8 Oct 27, 2025
+Updated 2237 GMT+8 Oct 27, 2025
 
 2025 spring, Complied by Hongfei Yan
 
@@ -2291,7 +2291,7 @@ G: []
 
 
 
-#### 练习T24729: 括号嵌套树
+#### 练习M24729: 括号嵌套树
 
 http://cs101.openjudge.cn/practice/24729/
 
@@ -2986,34 +2986,33 @@ Auxiliary Space: O(n)
 >
 > 3. **二叉树的节点数**：
 >
-> - 对于一个完全二叉树，节点数目与树的高度h有关系：节点数 `n = 2^(h+1) - 1`。
 > - 对于一般二叉树，节点数目是有限的，可以通过遍历计算。
->
-> 4. **满二叉树**：
->
-> - 满二叉树是一种特殊的二叉树，其中每一层的节点数都达到最大值（即每个非叶子节点都有两个子节点）。假设树的高度为h，则满二叉树的节点数为 `2^(h+1) - 1`。
->
-> 5. **完全二叉树**：
->
-> - 完全二叉树是一种特殊的二叉树，其中每一层的节点都被完全填满，且最底层的节点集中在左边。如果一个完全二叉树有n个节点，那么它的高度为 `log2(n)`（向下取整）。
->
-> 6. **叶子节点和非叶子节点**：
->
-> - **叶子节点**：没有子节点的节点。
+> 
+>4. **满二叉树**：
+> 
+>- 满二叉树是一种特殊的二叉树，其中每一层的节点数都达到最大值（即每个非叶子节点都有两个子节点）。假设树的高度为h，则满二叉树的节点数为 `2^(h+1) - 1`。
+> 
+>5. **完全二叉树**：
+> 
+>- 完全二叉树是一种特殊的二叉树，其中每一层的节点都被完全填满，且最底层的节点集中在左边。如果一个完全二叉树有n个节点，那么它的高度为 `log2(n)`（向下取整）。
+> 
+>6. **叶子节点和非叶子节点**：
+> 
+>- **叶子节点**：没有子节点的节点。
 > - **非叶子节点**：有一个或两个子节点的节点。
->
-> 7. **二叉树的遍历方式**：
->
-> - **前序遍历**（Pre-order）：根节点 -> 左子树 -> 右子树
+> 
+>7. **二叉树的遍历方式**：
+> 
+>- **前序遍历**（Pre-order）：根节点 -> 左子树 -> 右子树
 > - **中序遍历**（In-order）：左子树 -> 根节点 -> 右子树
 > - **后序遍历**（Post-order）：左子树 -> 右子树 -> 根节点
 > - **层序遍历**（Level-order）：从上到下、从左到右逐层访问节点。
->
-> 8. **二叉树的平衡性**：
->
-> - 如果一个二叉树的左右子树的高度差的绝对值大于1，那么这个二叉树就是**不平衡的**。如果一个二叉树在任何时刻都满足左右子树高度差不超过1，那么它就是**平衡二叉树**。
->
-> 这些性质是理解二叉树结构的基础，有助于设计和优化基于二叉树的算法，比如二叉查找树、平衡树等。
+> 
+>8. **二叉树的平衡性**：
+> 
+>- 如果一个二叉树的左右子树的高度差的绝对值大于1，那么这个二叉树就是**不平衡的**。如果一个二叉树在任何时刻都满足左右子树高度差不超过1，那么它就是**平衡二叉树**。
+> 
+>这些性质是理解二叉树结构的基础，有助于设计和优化基于二叉树的算法，比如二叉查找树、平衡树等。
 
 
 
