--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1,6 +1,6 @@
 # Week7~10 🌲算
 
-Updated 2237 GMT+8 Oct 27, 2025
+Updated 0011 GMT+8 11 03, 2025
 
 2025 spring, Complied by Hongfei Yan
 
@@ -3342,39 +3342,6 @@ print(printexp(pt))
 
 
 
-> ### M24591:中序表达式转后序表达式
->
-> http://cs101.openjudge.cn/practice/24591/
->
-> ```python
-> import ast
-> 
-> # 定义运算符到字符串的映射
-> operator_to_str = {
->     ast.Add: '+',
->     ast.Sub: '-',
->     ast.Mult: '*',
->     ast.Div: '/'
-> }
-> 
-> def postfix(node):
->     # 如果节点是常量，则直接返回其值
->     if isinstance(node, ast.Constant):
->         return str(node.value)
->     # 如果节点是二元运算符，则递归处理左右子节点并拼接运算符
->     elif isinstance(node, ast.BinOp):
->         return f'{postfix(node.left)} {postfix(node.right)} {operator_to_str[type(node.op)]}'
-> 
-> # 主程序部分
-> n = int(input())
-> for i in range(n):
->     expr = input()
->     tree = ast.parse(expr, mode='eval')
->     print(postfix(tree.body))
-> ```
-
-
-
 #### 4.1.2 实现：计算二叉解析树的递归函数
 
 代码清单6-10。
@@ -3399,11 +3366,127 @@ def evaluate(parseTree):
 
 我们使用具有键+、-、＊和/的字典实现。字典中存储的值是`operator`模块的函数。该模块提供了常用运算符的函数版本。<mark>在字典中查询运算符时，对应的函数对象被取出</mark>。既然取出的对象是函数，就可以用普通的方式`function(param1, param2)`调用。因此，`opers\['+'](2, 2)`等价于`operator.add(2, 2)`。
 
-最后，让我们通过图4中的解析树构建过程来理解evaluate函数。第一次调用evaluate函数时，将整棵树的根节点作为参数parseTree传入。然后，获取指向左右子节点的引用，检查它们是否存在。<mark>第11行进行递归调用。</mark>从查询根节点的运算符开始，该运算符是+，对应operator.add函数，要传入两个参数。和普通的Python函数调用一样，Python做的第一件事是计算入参的值。本例中，两个入参都是对evaluate函数的递归调用。由于入参的计算顺序是从左到右，因此第一次递归调用是在左边。对左子树递归调用evaluate函数，发现节点没有左右子节点，所以这是一个叶子节点。处于叶子节点时，只需返回叶子节点的值作为计算结果即可。本例中，返回整数3。
+最后，让我们通过图4中的解析树构建过程来理解evaluate函数。第一次调用evaluate函数时，将整棵树的根节点作为参数parseTree传入。然后，获取指向左右子节点的引用，检查它们是否存在。<mark>第11行进行递归调用。</mark>从查询根节点的运算符开始，该运算符是+，对应`operator.add`函数，要传入两个参数。和普通的Python函数调用一样，Python做的第一件事是计算入参的值。本例中，两个入参都是对evaluate函数的递归调用。由于入参的计算顺序是从左到右，因此第一次递归调用是在左边。对左子树递归调用evaluate函数，发现节点没有左右子节点，所以这是一个叶子节点。处于叶子节点时，只需返回叶子节点的值作为计算结果即可。本例中，返回整数3。
 
-至此，已经为顶层的`operator.add`调用计算出一个参数的值了，但还没完。继续从左到右的参数计算过程，现在进行一个递归调用，计算根节点的右子节点。发现该节点不仅有左子节点，还有右子节点，所以检查节点存储的运算符——是＊，将左右子节点作为参数调用函数。这时可以看到，两个调用都已到达叶子节点，计算结果分别是4和5。算出参数之后，返回operator.mul(4, 5)的结果。至此，已经算出了顶层运算符（+）的操作数，剩下的工作就是完成对operator.add(3, 20)的调用。因此，表达式(3 + (4 ∗ 5))的计算结果就是23。
+至此，已经为顶层的`operator.add`调用计算出一个参数的值了，但还没完。继续从左到右的参数计算过程，现在进行一个递归调用，计算根节点的右子节点。发现该节点不仅有左子节点，还有右子节点，所以检查节点存储的运算符——是＊，将左右子节点作为参数调用函数。这时可以看到，两个调用都已到达叶子节点，计算结果分别是4和5。算出参数之后，返回`operator.mul(4, 5)`的结果。至此，已经算出了顶层运算符（+）的操作数，剩下的工作就是完成对operator.add(3, 20)的调用。因此，表达式`(3 + (4 ∗ 5))`的计算结果就是23。
+
+
 
 #### 4.1.3 编程题目
+
+##### 示例M24591:中序表达式转后序表达式
+
+stack, ast, http://cs101.openjudge.cn/practice/24591/
+
+中序表达式是运算符放在两个数中间的表达式。乘、除运算优先级高于加减。可以用"()"来提升优先级 --- 就是小学生写的四则算术运算表达式。中序表达式可用如下方式递归定义：
+
+1）一个数是一个中序表达式。该表达式的值就是数的值。
+
+2) 若a是中序表达式，则"(a)"也是中序表达式(引号不算)，值为a的值。
+3) 若a,b是中序表达式，c是运算符，则"acb"是中序表达式。"acb"的值是对a和b做c运算的结果，且a是左操作数，b是右操作数。
+
+输入一个中序表达式，要求转换成一个后序表达式输出。
+
+**输入**
+
+第一行是整数n(n<100)。接下来n行，每行一个中序表达式，数和运算符之间没有空格，长度不超过700。
+
+**输出**
+
+对每个中序表达式，输出转成后序表达式后的结果。后序表达式的数之间、数和运算符之间用一个空格分开。
+
+样例输入
+
+```
+3
+7+8.3 
+3+4.5*(7+2)
+(3)*((3+4)*(2+3.5)/(4+5)) 
+```
+
+样例输出
+
+```
+7 8.3 +
+3 4.5 7 2 + * +
+3 3 4 + 2 3.5 + * 4 5 + / *
+```
+
+
+
+思路：利用 Python 的自带的语法解析模块 `ast` 模块把中序表达式解析成抽象语法树（AST，Abstract Syntax Tree），把原本需要自己写“运算符优先级”和“栈”的问题，交给 Python 的语法分析器自动完成。
+然后递归遍历语法树，按照“左子树 → 右子树 → 根节点”的顺序输出，这正是 **后序遍历** 的顺序，也正对应 **后缀表达式** 的结构。
+
+`mode='eval'` 让 `ast.parse()` 解析的是“单个表达式”，不会把它当成程序。
+
+返回的 `tree` 是 `ast.Expression` 对象；
+
+真正的表达式节点（`BinOp` / `Constant`）在 `tree.body` 里，所以我们要从 `tree.body` 开始递归遍历。
+
+`ast` 中的运算符是类（如 `ast.Add`, `ast.Mult`），
+需要映射成我们要打印的符号 `"+"`、`"-"`、`"*"`、`"/"`。
+
+```python
+import ast
+
+# 定义运算符到字符串的映射
+operator_to_str = {
+ ast.Add: '+',
+ ast.Sub: '-',
+ ast.Mult: '*',
+ ast.Div: '/'
+}
+
+def postfix(node):
+ # 如果节点是常量，则直接返回其值
+ if isinstance(node, ast.Constant):
+     return str(node.value)
+ # 如果节点是二元运算符，则递归处理左右子节点并拼接运算符
+ elif isinstance(node, ast.BinOp):
+     return f'{postfix(node.left)} {postfix(node.right)} {operator_to_str[type(node.op)]}'
+
+# 主程序部分
+n = int(input())
+for i in range(n):
+ expr = input()
+ tree = ast.parse(expr, mode='eval')
+ print(postfix(tree.body))
+```
+
+> **对照示意图：**
+>
+> ```
+> tree = ast.parse("3+4.5*(7+2)", mode='eval')
+> ```
+>
+> 结构：
+>
+> ```
+> Expression
+> └── body → BinOp(+)
+>       ├── left: Constant(3)
+>       └── right: BinOp(*)
+>               ├── left: Constant(4.5)
+>               └── right: BinOp(+)
+>                       ├── left: Constant(7)
+>                       └── right: Constant(2)
+> ```
+>
+> 调用：
+>
+> ```
+> postfix(tree.body)
+> ```
+>
+> 从 `BinOp(+)` 开始递归，就能正确生成：
+>
+> ```
+> 3 4.5 7 2 + * +
+> ```
+
+
+
+
 
 ##### 练习M25140: 根据后序表达式建立队列表达式
 
@@ -3446,19 +3529,20 @@ gfCecbDdAaEBF
 
 
 
-The problem is asking to convert a postfix expression to an equivalent queue expression. The queue expression is obtained by reversing the level order traversal of the expression tree built from the postfix expression.  
+问题是要求将一个后缀表达式转换为等价的“队列表达式”。这个“队列表达式”是通过对由后缀表达式构建出的表达式树进行**层序遍历的逆序**得到的。
 
-Here is a step-by-step plan:  
-1.Create a TreeNode class to represent each node in the tree.
-2.Create a function build_tree that takes the postfix expression as input and returns the root of the constructed tree.
-	Use a stack to store the nodes.
-	Iterate over the characters in the postfix expression.
-	If the character is an operand, create a new node and push it onto the stack.
-	If the character is an operator, pop two nodes from the stack, make them the children of a new node, and push the new node onto the stack.
-3.Create a function level_order_traversal that takes the root of the tree as input and returns the level order traversal of the tree.
-	Use a queue `traversal` to store the nodes to be visited.
-	While the queue is not empty, dequeue a node, visit it, and enqueue its children.
-4.For each postfix expression, construct the tree, perform the level order traversal, reverse the result, and output it.
+步骤如下：
+
+1. 创建一个 `TreeNode` 类来表示树中的每个节点。
+2. 创建一个 `build_tree` 函数，接收后缀表达式作为输入，并返回构建好的表达式树的根节点。
+   - 使用栈来存储节点。
+   - 遍历后缀表达式的每一个字符：
+     - 如果字符是操作数（operand），创建一个新节点并压入栈中。
+     - 如果字符是操作符（operator），从栈中弹出两个节点，作为新操作符节点的左右子节点，并将该新节点压入栈中。
+3. 创建一个 `level_order_traversal` 函数，接收树的根节点，返回其层序遍历的结果。
+   - 使用一个队列 `traversal` 来存储待访问的节点。
+   - 当队列非空时，出队一个节点，访问它，并将其左右子节点依次入队。
+4. 对每一个后缀表达式，先构造树，再进行层序遍历，然后将结果反转，输出最终字符串。
 
 ```python
 class TreeNode:
@@ -3548,6 +3632,70 @@ def preorder(self):
     if self.rightChild:
         self.rightChild.preorder()
 ```
+
+
+
+**Q: 为什么内部方法必须在递归调用preorder前，检查左右子节点是否存在？**
+
+> 它触及了**外部函数**与**类的内部方法**在设计递归算法（如树的遍历）时的核心差异。
+>
+> 我们来深入分析为什么——如原文所说——**内部方法必须检查左右节点是否存在**，而外部函数版本则不需要显式检查子节点，只需要检查传入的树对象本身是否存在。
+>
+> ------
+>
+> **一、外部函数版本为何“简洁”？**
+>
+> ```
+> def preorder(tree):
+>     if tree:
+>         print(tree.getRootVal())
+>         preorder(tree.getLeftChild())
+>         preorder(tree.getRightChild())
+> ```
+>
+> 这个版本之所以“格外简洁”，是因为它把 **树的节点是否存在** 的判断统一交给了函数入口的 `if tree:`。
+>
+> - 每次递归调用 `preorder(...)` 时，参数可能是 `None`（比如某个节点没有左孩子）。
+> - 但函数一开始就检查 `if tree:`，所以一旦传入的是 `None`，函数直接返回，不会继续执行。
+> - 因此，即使我们“无脑”地把 `tree.getLeftChild()`（可能为 `None`）传进去，也能安全处理。
+>
+> ✅ **优点**：逻辑集中，代码简洁，递归调用无需前置判断。
+>
+> ------
+>
+> **二、内部方法为何必须检查子节点？**
+>
+> 再看代码清单6-12：
+>
+> ```
+> def preorder(self):
+>     print(self.key)
+>     if self.leftChild:
+>         self.leftChild.preorder()
+>     if self.rightChild:
+>         self.rightChild.preorder()
+> ```
+>
+> 这里的关键在于：`preorder` 是 `BinaryTree` 类的一个实例方法。这意味着：
+>
+> - 它只能被一个有效的 `BinaryTree` 实例调用（即 `self` 是一个真实存在的节点对象）。
+> - 但 `self.leftChild` 和 `self.rightChild` 可能是 `None`。
+> - 如果你尝试对 `None` 调用 `.preorder()`，会引发 AttributeError：`'NoneType' object has no attribute 'preorder'`。
+>
+> 🚨 所以你**不能像外部函数那样直接递归调用**：
+>
+> ```
+> self.leftChild.preorder()  # 如果 leftChild 是 None，就会出错！
+> ```
+>
+> ✅ 因此必须先判断：
+>
+> ```
+> if self.leftChild:
+>     self.leftChild.preorder()
+> ```
+>
+> 这一步是**为了防止调用不存在对象的方法**，属于安全性检查。
 
 
 
@@ -3874,18 +4022,18 @@ CBNTX
 
 
 
-The problem is asking to construct a binary tree from given preorder and inorder traversal sequences, and then output the postorder traversal sequence of the constructed tree.  
+问题是要求根据给定的前序遍历和中序遍历序列来构造一棵二叉树，然后输出该构造树的后序遍历序列。
 
-Here is a step-by-step plan:  
-1.Create a TreeNode class to represent each node in the tree.
-2.Create a function build_tree that takes the preorder and inorder sequences as input and returns the root of the constructed tree.
-	The first character of the preorder sequence is the root of the tree.
-	Find the position of the root in the inorder sequence.
-	Recursively construct the left subtree using the left part of the inorder sequence and the corresponding part of the preorder sequence.
-	Recursively construct the right subtree using the right part of the inorder sequence and the corresponding part of the preorder sequence.
-3.Create a function postorder_traversal that takes the root of the tree as input and returns the postorder traversal sequence of the tree.
-4.For each pair of preorder and inorder sequences, construct the tree and output the postorder traversal sequence.
-Here is the Python code that implements this plan:
+以下是分步计划：
+
+1. 创建一个 `TreeNode` 类来表示树中的每个节点。
+2. 创建一个函数 `build_tree`，它接收前序和中序遍历序列作为输入，并返回所构造树的根节点。
+   - 前序遍历序列的第一个字符是树的根节点。
+   - 在中序遍历序列中找到根节点的位置。
+   - 使用中序序列的左半部分和对应的前序序列部分递归地构造左子树。
+   - 使用中序序列的右半部分和对应的前序序列部分递归地构造右子树。
+3. 创建一个函数 `postorder_traversal`，它接收树的根节点作为输入，并返回树的后序遍历序列。
+4. 对于每一对前序和中序遍历序列，构造树并输出其后序遍历序列。
 
 ```python
 class TreeNode:
