--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1,6 +1,6 @@
 # Week7~10 🌲算
 
-Updated 0011 GMT+8 11 03, 2025
+Updated 1818 GMT+8 11 03, 2025
 
 2025 spring, Complied by Hongfei Yan
 
@@ -3773,7 +3773,7 @@ print(printexp(pt))
 
 
 
-注意，printexp函数给每个数字都加上了括号。尽管不能算错误，但这些括号显然是多余的。请修改printexp函数，移除这些括号。
+注意，printexp函数给每个数字都加上了括号。尽管不能算错误，但这些括号显然是多余的。~~请修改printexp函数，移除这些括号。~~
 
 
 
@@ -3781,7 +3781,7 @@ print(printexp(pt))
 
 
 
-##### 练习LC105.从前序与中序遍历序列构造二叉树
+##### 练习M105.从前序与中序遍历序列构造二叉树
 
 https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/
 
@@ -3854,7 +3854,7 @@ if __name__ == '__main__':
 
 
 
-<mark>以下是与LC105类似的3个题目</mark>
+<mark>以下是与力扣 105 类似的3个题目</mark>
 
 ###### 1）练习M24750: 根据二叉树中后序序列建树
 
@@ -3981,7 +3981,20 @@ root = buildTree(list(inorder), list(postorder))
 print(''.join(preorderTraversal(root)))
 ```
 
-
+> **24行，25行递归调用顺序：先右后左**
+>
+> ```
+> root.right = buildTree(..., postorder)  # 先构建右子树
+> root.left = buildTree(..., postorder)   # 再构建左子树
+> ```
+>
+> 这个顺序至关重要！
+>
+> - 当你 `pop()` 出当前根后，下一个要构建的是**右子树**。
+> - 而 `postorder` 剩下的末尾元素，正好是**右子树的根**。
+> - 构建完右子树后，再构建左子树，此时 `postorder` 剩下的末尾又是**左子树的根**。
+>
+> 所以，**递归顺序与 `pop()` 顺序完美匹配**。
 
 
 
@@ -4178,7 +4191,18 @@ not ( True or False ) and ( False or True and True )
 
 
 
-<mark>这三个操作符：`not`：优先级最高，`and`：其次，`or`：优先级最低。</mark>
+题意：<mark>这三个操作符：`not`：优先级最高，`and`：其次，`or`：优先级最低。</mark>手写一个完整的**Shunting Yard + AST 构造 + 打印**
+
+
+
+**思路：基于优先级的通用中缀打印**
+
+核心思想：
+
+- 给每个节点定义一个**优先级值**（`not=3, and=2, or=1`）。
+- 打印时，**仅当子节点的优先级低于父节点时加括号**。
+- `not` 是单目操作符，只处理一个子节点。
+- `True`、`False` 优先级设为 4（最高，永远不加括号）。
 
 ```python
 class BinaryTree:
@@ -4187,32 +4211,20 @@ class BinaryTree:
         self.leftChild = left
         self.rightChild = right
 
-    def getrightchild(self):
-        return self.rightChild
-
-    def getleftchild(self):
-        return self.leftChild
-
-    def getroot(self):
-        return self.root
-
-def postorder(string):    #中缀改后缀 Shunting yard algorightm
-    opStack = []
-    postList = []
+def postorder(string):  # 中缀改后缀 (Shunting Yard)
+    opStack, postList = [], []
     inList = string.split()
-    prec = { '(': 0, 'or': 1,'and': 2,'not': 3}
-
+    prec = {'(': 0, 'or': 1, 'and': 2, 'not': 3}
     for word in inList:
         if word == '(':
             opStack.append(word)
         elif word == ')':
-            topWord = opStack.pop()
-            while topWord != '(':
-                postList.append(topWord)
-                topWord = opStack.pop()
-        elif word == 'True' or word == 'False':
+            while opStack and opStack[-1] != '(':
+                postList.append(opStack.pop())
+            opStack.pop()
+        elif word in ('True', 'False'):
             postList.append(word)
-        else:
+        else:  # operator
             while opStack and prec[word] <= prec[opStack[-1]]:
                 postList.append(opStack.pop())
             opStack.append(word)
@@ -4220,220 +4232,159 @@ def postorder(string):    #中缀改后缀 Shunting yard algorightm
         postList.append(opStack.pop())
     return postList
 
-def buildParseTree(infix):       #以后缀表达式为基础建树
+def buildParseTree(infix):
     postList = postorder(infix)
     stack = []
     for word in postList:
         if word == 'not':
-            newTree = BinaryTree(word)
-            newTree.leftChild = stack.pop()
-            stack.append(newTree)
-        elif word == 'True' or word == 'False':
+            child = stack.pop()
+            stack.append(BinaryTree('not', child))
+        elif word in ('True', 'False'):
             stack.append(BinaryTree(word))
         else:
-            right = stack.pop()
-            left = stack.pop()
-            newTree = BinaryTree(word)
-            newTree.leftChild = left
-            newTree.rightChild = right
-            stack.append(newTree)
-    currentTree = stack[-1]
-    return currentTree
+            right, left = stack.pop(), stack.pop()
+            stack.append(BinaryTree(word, left, right))
+    return stack[-1]
 
-def printTree(parsetree: BinaryTree):
-    if parsetree.getroot() == 'or':
-        return printTree(parsetree.getleftchild()) + ['or'] + printTree(parsetree.getrightchild())
-    elif parsetree.getroot() == 'not':
-        return ['not'] + (
-            ['('] + printTree(parsetree.getleftchild()) + [')']
-            if parsetree.leftChild.getroot() not in ['True', 'False']
-            else printTree(parsetree.getleftchild())
-        )
-    elif parsetree.getroot() == 'and':
-        leftpart = (
-            ['('] + printTree(parsetree.getleftchild()) + [')']
-            if parsetree.leftChild.getroot() == 'or'
-            else printTree(parsetree.getleftchild())
-        )
-        rightpart = (
-            ['('] + printTree(parsetree.getrightchild()) + [')']
-            if parsetree.rightChild.getroot() == 'or'
-            else printTree(parsetree.getrightchild())
-        )
-        return leftpart + ['and'] + rightpart
-    else:
-        return [str(parsetree.getroot())]
+# 定义运算符优先级
+priority = {'or': 1, 'and': 2, 'not': 3, 'True': 4, 'False': 4}
+
+def printTree(tree):
+    """返回 token 列表"""
+    root = tree.root
+    if root in ('True', 'False'):
+        return [root]
+
+    if root == 'not':
+        child = tree.leftChild
+        # 若子优先级更低则加括号
+        child_tokens = printTree(child)
+        if priority[child.root] < priority[root]:
+            child_tokens = ['('] + child_tokens + [')']
+        return ['not'] + child_tokens
+
+    # 二元操作符 and/or
+    left, right = tree.leftChild, tree.rightChild
+    left_tokens = printTree(left)
+    right_tokens = printTree(right)
+    if priority[left.root] < priority[root]:
+        left_tokens = ['('] + left_tokens + [')']
+    if priority[right.root] < priority[root]:
+        right_tokens = ['('] + right_tokens + [')']
+    return left_tokens + [root] + right_tokens
 
 def main():
-    infix = input()
+    infix = input().strip()
     Tree = buildParseTree(infix)
     print(' '.join(printTree(Tree)))
 
-main()
+if __name__ == "__main__":
+    main()
+
 ```
 
 
 
-`printTree`函数是一个递归函数，接收一个`BinaryTree`对象作为参数，然后根据树的结构和节点的值生成一个字符串列表。
+直接利用 Python 自带的 `ast` 模块来完成解析与遍历，无需手写语法分析器。
+因为 `ast.parse()` 能正确识别 Python 布尔表达式（and/or/not/True/False）的语法树。
 
-函数的工作方式如下：
+------
 
-1. 首先，检查树的根节点的值。根据值的不同，函数会执行不同的操作。
+✅ 改写思路（使用 `ast`）
 
-2. 如果根节点的值为"or"，函数会递归地调用自身来处理左子树和右子树，然后将结果合并，并在两个结果之间插入"or"。
+1. 直接用 `ast.parse(expr, mode='eval')` 将输入的布尔表达式解析为抽象语法树（AST）。
+2. 递归遍历 AST，根据节点类型 (`BoolOp`, `UnaryOp`, `NameConstant` 等) 输出字符串。
+3. 根据运算符优先级，**仅在必要时加括号**。
 
-3. 如果根节点的值为"not"，函数会递归地调用自身来处理左子树。<mark>如果左子树的根节点的值不是"True"或"False"，则会在左子树的结果周围添加括号。</mark>
+优先级设定为：
 
-4. 如果根节点的值为"and"，函数会递归地调用自身来处理左子树和右子树。<mark>如果左子树或右子树的根节点的值为"or"，则会在相应子树的结果周围添加括号。</mark>
+```
+not: 3
+and: 2
+or : 1
+```
 
-5. 如果根节点的值为"True"或"False"，函数会直接返回一个包含该值的列表。
+当子表达式优先级低于父表达式时，才加括号。
 
-6. 最后，函数会将生成的字符串列表合并为一个字符串，并返回。
+```python
+import ast
+import sys
 
-> `printTree` 函数的确是这个程序的关键部分，它负责**把表达式树重新转成中缀表达式**，而且在这个过程中要**去掉不必要的括号，只保留必要的括号**，以保证表达式的优先级正确。
->
-> 我们来**一行行分析这个函数**，并且结合优先级规则来详细解释。
->
-> ---
->
-> ✅ 背景知识（非常重要）
->
-> 我们有 3 个操作符：
->
-> - `not`：优先级最高（3）
-> - `and`：中间（2）
-> - `or`：最低（1）
->
-> 所以当我们重建中缀表达式时，如果低优先级的操作被嵌套在高优先级的操作里面，那就**需要加括号**来保持原来的优先顺序。
->
-> ---
->
-> 💡 函数签名
->
-> ```python
-> def printTree(parsetree: BinaryTree):
-> ```
->
-> 这是一个递归函数。每次调用会处理一个子树，返回一个**字符串列表**（最后用 `' '.join()` 组合成结果）。
->
-> ---
->
-> 🧩 情况 1：当前节点是 `or`
->
-> ```python
-> if parsetree.getroot() == 'or':
->     return printTree(parsetree.getleftchild()) + ['or'] + printTree(parsetree.getrightchild())
-> ```
->
-> - `or` 是最低优先级，所以它**永远不会被其他操作包裹住**（不需要加括号）
-> - 左右子树分别处理就好，中间加上 `'or'`
->
-> ---
->
-> 🧩 情况 2：当前节点是 `not`
->
-> ```python
-> elif parsetree.getroot() == 'not':
->     return ['not'] + (
->         ['('] + printTree(parsetree.getleftchild()) + [')']
->         if parsetree.leftChild.getroot() not in ['True', 'False']
->         else printTree(parsetree.getleftchild())
->     )
-> ```
->
-> - `not` 是单目操作符（只有一个子节点）
->
-> - 如果它的子节点是 `'True'` 或 `'False'`，就直接写：
->
->   ```
->   not True
->   ```
->
-> - 但如果子节点是像 `True or False` 这样的表达式，需要加括号包住它：
->
->   ```
->   not (True or False)
->   ```
->
-> 👉 这是为了防止表达式优先级出错！
->
-> ---
->
-> 🧩 情况 3：当前节点是 `and`
->
-> ```python
-> elif parsetree.getroot() == 'and':
->     leftpart = (
->         ['('] + printTree(parsetree.getleftchild()) + [')']
->         if parsetree.leftChild.getroot() == 'or'
->         else printTree(parsetree.getleftchild())
->     )
->     rightpart = (
->         ['('] + printTree(parsetree.getrightchild()) + [')']
->         if parsetree.rightChild.getroot() == 'or'
->         else printTree(parsetree.getrightchild())
->     )
->     return leftpart + ['and'] + rightpart
-> ```
->
-> - `and` 的优先级高于 `or`
->
-> - 如果它的某个子节点是 `or`，就必须加括号：
->
->   ```
->   (A or B) and C
->   ```
->
-> 否则表达式优先级就会错了！
->
-> **例子：**
->
-> - 正确的：`(True or False) and True`
-> - 错误的：`True or False and True`（这个意思不一样）
->
-> ---
->
-> 🧩 情况 4：叶子节点（True 或 False）
->
-> ```python
-> else:
->     return [str(parsetree.getroot())]
-> ```
->
-> 这个就是递归到底了，返回布尔值（字符串形式）
->
-> ---
->
-> 🔁 总结：如何判断加不加括号？
->
-> - `or` 最低优先级，从不加括号。
-> - `and` 如果操作的是 `or`，要加括号。
-> - `not` 如果操作的是复杂表达式（不是布尔常量），要加括号。
->
-> ---
->
-> ✨举个完整例子
->
-> 输入：
->
-> ```plaintext
-> ( not ( True or False ) ) and ( False or True and True )
-> ```
->
-> 输出：
->
-> ```plaintext
-> not ( True or False ) and ( False or True and True )
-> ```
->
-> 说明：
->
-> - `not` 操作 `True or False` → 加括号 ✅
-> - `and` 的左右：
->   - 左是 `not (...)`：不需要额外括号
->   - 右是 `False or True and True`，按优先级就是 `False or (True and True)`，不需要额外括号
+# 优先级： or=1, and=2, not=3
+PREC = {
+    ast.Or: 1,
+    ast.And: 2,
+    ast.Not: 3
+}
 
+def get_prec(node):
+    """返回节点的优先级（数字越大优先级越高）。默认常量/名称优先级最高。"""
+    if isinstance(node, ast.BoolOp):
+        return PREC[type(node.op)]
+    if isinstance(node, ast.UnaryOp):
+        return PREC[type(node.op)]
+    # 常量或其它原子表达式
+    return 4
 
+def to_str(node, parent_prec=0):
+    """将 AST 节点转为 token 风格的字符串（带空格），根据 parent_prec 决定是否需要外层括号。"""
+    # BoolOp: values 列表（and/or）
+    if isinstance(node, ast.BoolOp):
+        op = 'and' if isinstance(node.op, ast.And) else 'or'
+        prec = PREC[type(node.op)]
+        parts = [to_str(v, prec) for v in node.values]
+        s = f' {op} '.join(parts)
+        if prec < parent_prec:
+            return f'( {s} )'
+        return s
+
+    # UnaryOp: only support Not here
+    if isinstance(node, ast.UnaryOp) and isinstance(node.op, ast.Not):
+        prec = PREC[type(node.op)]
+        # 直接让子节点以 prec 作为 parent_prec 决定是否加括号（避免重复加括号）
+        operand_str = to_str(node.operand, prec)
+        return f'not {operand_str}'
+
+    # Constant (Python 3.8+)
+    if isinstance(node, ast.Constant):
+        # 确保 True/False 以首字母大写形式输出
+        val = node.value
+        if val is True:
+            return 'True'
+        if val is False:
+            return 'False'
+        # 一般不会出现其他常量，但保底
+        return str(val)
+
+    # 兼容旧版本 (ast.NameConstant)
+    if hasattr(ast, 'NameConstant') and isinstance(node, ast.NameConstant):
+        if node.value is True:
+            return 'True'
+        if node.value is False:
+            return 'False'
+        return str(node.value)
+
+    # 也兼容像直接写 True/False 作为 Name（极少见）
+    if isinstance(node, ast.Name):
+        return node.id
+
+    # 比较/其他表达式：简单用 ast.unparse (若可用) 或回退到手动
+    # 为了本题只需支持布尔表达式 True/False/and/or/not，所以其余类型抛错
+    raise TypeError(f"Unsupported node type: {type(node)}")
+
+def main():
+    data = sys.stdin.read().strip()
+    if not data:
+        return
+    # ast.parse 解析为 Expression
+    tree = ast.parse(data, mode='eval')
+    out = to_str(tree.body)
+    print(out)
+
+if __name__ == '__main__':
+    main()
+
+```
 
 
 
@@ -4445,15 +4396,15 @@ main()
 
 > In this section, we consider an important text-processing task, text compression. In this problem, we are given a string X defined over some alphabet, such as the ASCII  character sets, and we want to efficiently encode X into a small binary string Y (using only the characters 0 and 1). Text compression is useful in any situation where we wish to reduce bandwidth for digital communications, soas to minimize the time needed to transmit our text. Likewise, text compression is useful for storing large documents more efficiently, so as to allow a fixed-capacity storage device to contain as many documents as possible.
 
-本节探讨的文本压缩方法是**Huffman code**。像ASCII这样的标准编码方案使用固定长度的二进制字符串来编码字符（在传统的或扩展的ASCII系统中分别为7位或8位）。Huffman code通过<mark>使用较短的码字code-word 字符串编码高频字符和较长的码字字符串编码低频字符来节省空间。</mark>此外，Huffman code使用专门针对给定字母表上的任何字符串X优化的可变长度编码variable-length encoding。这种优化基于字符**频率**的使用，对于每个字符c，有一个c在字符串X中出现次数的计数f(c)。
+本节探讨的文本压缩方法是**Huffman code**。像ASCII这样的标准编码方案使用固定长度的二进制字符串来编码字符（在传统的或扩展的ASCII系统中分别为7位或8位）。Huffman code通过<mark>使用较短的码字code-word 字符串编码高频字符和较长的码字字符串编码低频字符来节省空间。</mark>此外，Huffman code使用专门针对给定字母表上的任何字符串`X`优化的可变长度编码variable-length encoding。这种优化基于字符**频率**的使用，对于每个字符`c`，其在字符串X中出现次数的计数为 `f(c)`。
 
 > The method for text compression explored in this section is the **Huffman code**. Standard encoding schemes, such as ASCII, use fixed-length binary strings to encode characters (with 7 or 8 bits in the traditional or extended ASCII systems, respectively). The Huffman code saves space over a fixed-length encoding by using short code-word strings to encode high-frequency characters and long code-word strings to encode low-frequency characters. Furthermore, the Huffman code uses a variable-length encoding specifically optimized for a given string X over any alphabet. The optimization is based on the use of character **frequencies**, where we have, for each character c, a count f(c) of the number of times c appears in the string X.
 
-为了编码字符串X，将X中的每个字符转换为可变长度的码字，并按顺序连接所有这些码字以生成X的编码Y。为了避免歧义，<mark>在编码中没有任何码字是另一个码字的前缀。这样的编码被称为**前缀编码prefix code**，它简化了将Y解码回X的过程</mark>。（参见图13.9。）即使有这个限制，使用可变长度前缀码所能达到的节省也是非常显著的，特别是如果字符频率存在较大的差异时（几乎每种书面语言的自然语言文本都是这种情况）。
+为了编码字符串`X`，将其中的每个字符转换为可变长度的码字，并按顺序连接所有这些码字以生成`X`的编码`Y`。为了避免歧义，<mark>在编码中没有任何码字是另一个码字的前缀。这样的编码被称为**前缀编码prefix code**，它简化了将Y解码回X的过程</mark>。（参见图13.9。）即使有这个限制，使用可变长度前缀码所能达到的节省也是非常显著的，特别是如果字符频率存在较大的差异时（几乎每种书面语言的自然语言文本都是这种情况）。
 
 > To encode the string X, we convert each character in X to a variable-length code-word, and we concatenate all these code-words in order to produce the encoding Y for X. In order to avoid ambiguities, we insist that no code-word in our encoding be a prefix of another code-word in our encoding. Such a code is called a **prefix code**, and it simplifies the decoding of Y to retrieve X. (See Figure 13.9.) Even with this restriction, the savings produced by a variable-length prefix code can be significant, particularly if there is a wide variance in character frequencies (as is the case for natural language text in almost every written language).
 
-用于为X生成最优可变长度前缀码的 Huffman’s algorithm 基于构造表示该代码的二叉树T。T中的每条边代表码字中的一位，到左孩子的边代表“0”，到右孩子的边代表“1”。每个叶子v与特定字符关联，该字符的码字由从T的根到v路径上的边所关联的比特序列定义。（参见图13.9。）每个叶子v都有一个频率f(v)，即与v关联的字符在X中的频率。此外，我们<mark>给T中的每个内部节点v赋予一个频率f(v)，它是以v为根的子树中所有叶子的频率之和。</mark>
+用于为`X`生成最优可变长度前缀码的 Huffman’s algorithm 基于构造表示该代码的二叉树`T`。`T`中的每条边代表码字中的一位，到左孩子的边代表“0”，到右孩子的边代表“1”。每个叶子`v`与特定字符关联，该字符的码字由从`T`的根到`v`路径上的边所关联的比特序列定义。（参见图13.9。）<mark>每个叶子`v`都有一个频率`f(v)`，即与v关联的字符在`X`中的频率</mark>。此外，我们<mark>给T中的每个内部节点v赋予一个频率f(v)，它是以v为根的子树中所有叶子的频率之和。</mark>
 
 > Huffman’s algorithm for producing an optimal variable-length prefix code for X is based on the construction of a binary tree T that represents the code. Each edge in T represents a bit in a code-word, with an edge to a left child representing a “0” and an edge to a right child representing a “1.” Each leaf v is associated with a specific character, and the code-word for that character is defined by the sequence of bits associated with the edges in the path from the root of T to v. (See Figure 13.9.) Each leaf v has a frequency, f(v), which is simply the frequency in X of the character associated with v. In addition, we give each internal node v in T a frequency, f(v), that is the sum of the frequencies of all the leaves in the subtree rooted at v.
 
@@ -4469,11 +4420,11 @@ main()
 
 #### 4.3.1 The Huffman Coding Algorithm
 
-霍夫曼编码算法从字符串X中每个独特的d个字符开始，每个字符都是单节点二叉树的根节点。算法以一系列的轮次进行。在每一轮中，算法将具有最小频率的两棵二叉树合并为一棵二叉树。此过程重复进行，直到只剩下一棵树为止。
+霍夫曼编码算法从字符串X中每个独特的d个字符开始，每个字符都是单节点二叉树的根节点。算法以一系列的轮次进行。<mark>在每一轮中，算法将具有最小频率的两棵二叉树合并为一棵二叉树。此过程重复进行，直到只剩下一棵树为止。</mark>
 
-霍夫曼算法中**while**循环的每次迭代可以使用堆表示的优先队列在O(logd)时间内实现。此外，每次迭代从Q中取出两个节点并添加一个新节点进去，这个过程将在Q中仅剩下一个节点之前重复d − 1次。因此，该算法的运行时间为O(n+ d logd)。虽然在此我们无法完整地证明该算法的正确性，但其直觉来源于一个简单的想法——任何最优编码都可以转换成一个最优编码，在这个编码中，频率最低的两个字符a和b的码字只在最后一个比特位上有所不同。对于用字符c替换a和b后的字符串重复这一论证，得到如下结论：
+霍夫曼算法中**while**循环的每次迭代可以使用堆表示的优先队列在O(logd)时间内实现。此外，每次迭代从Q中取出两个节点并添加一个新节点进去，这个过程将在Q中仅剩下一个节点之前重复d − 1次。因此，该算法的运行时间为O(n+ d logd)。虽然在此我们无法完整地证明该算法的正确性，但其直觉来源于一个简单的想法——任何最优编码都可以转换成一个最优编码，在这个编码中，频率最低的两个字符a和b的码字只在最后一个比特位上有所不同。将这两个字符 a、b 合并为一个新的字符 c，并在缩减后的字符串上重复这一推理，就能得到以下结论：
 
-**命题**：霍夫曼算法在$O(n+d logd)$时间内为长度为n且包含d个不同字符的字符串构造了一个最优前缀码。
+**命题（Proposition）**：霍夫曼算法在$O(n+d logd)$时间内为长度为n且包含d个不同字符的字符串构造了一个**最优前缀码（optimal prefix code）**。
 
 > The Huffman coding algorithm begins with each of the d distinct characters of the string X to encode being the root node of a single-node binary tree. The algorithm proceeds in a series of rounds. In each round, the algorithm takes the two binary
 > trees with the smallest frequencies and merges them into a single binary tree. It repeats this process until only one tree is left. 
@@ -4489,9 +4440,16 @@ main()
 
 霍夫曼算法用于构建最优编码是被称为<mark>**贪心法**的一种算法设计模式的应用示例。这种设计模式被应用于优化问题，其中我们试图在构建某种结构的同时最小化或最大化该结构的某些属性。</mark>
 
-贪心法模式的通用公式几乎与蛮力法一样简单。为了使用贪心法解决给定的优化问题，我们通过一系列选择来推进。这个序列从某个易于理解的初始条件开始，并计算该初始条件的成本。然后，该模式要求我们通过识别当前所有可能的选择中能够带来最佳成本改进的决策，迭代地做出额外的选择。这种方法并不总是能导致最优解。
+贪心法的通用思路（或“模式公式”）几乎和暴力法（brute-force method）一样简单：
 
-但确实有一些问题是适用的，这类问题被称为具有**贪心选择性质**。这种性质是指，可以通过一系列局部最优选择（即每次选择都是在当时可用的可能性中当前最优的）从一个定义明确的初始条件出发，达到全局最优条件。<mark>计算最优可变长度前缀编码的问题正是具有贪心选择性质的一个例子。</mark>
+为了解决某个优化问题，贪心法通常通过一系列决策（choices）逐步完成：
+
+1. 从一个**明确且易理解的初始状态**开始，并计算该初始状态的“代价”（cost）。
+2. 之后，算法**逐步做出新的选择**，每一步都从当前所有可能的选择中，挑选出**能带来最优代价改进**的那个。
+
+如此迭代，直到无法继续改进为止。
+
+然而，这种方法**并不总能得到最优解**。但对于某些特定的问题，它确实有效。这类问题被称为具有**贪心选择性质（greedy-choice property）**的问题。即：从某个明确的初始状态出发，通过一系列“局部最优选择”（每一步都选当前最优的方案），最终能达到全局最优解。<mark>求解最优可变长度前缀编码（optimal variable-length prefix code）的问题正是具有贪心选择性质的典型例子。</mark>
 
 > Huffman’s algorithm for building an optimal encoding is an example application of an algorithmic design pattern called the greedy method. This design pattern is applied to optimization problems, where we are trying to construct some structure
 > while minimizing or maximizing some property of that structure. 
@@ -4561,7 +4519,7 @@ if __name__ == "__main__":
 
 这段代码首先定义了一个 `Node` 类来表示哈夫曼树的节点。然后，使用最小堆来构建哈夫曼树，每次从堆中取出两个频率最小的节点进行合并，直到堆中只剩下一个节点，即哈夫曼树的根节点。接着，使用递归方法计算哈夫曼树的<mark>带权外部路径长度（weighted external path length）</mark>。最后，输出计算得到的带权外部路径长度。
 
-你可以运行这段代码来得到该最优二叉编码树的带权外部路径长度。
+可以运行这段代码来得到该最优二叉编码树的带权外部路径长度。
 
 
 
@@ -4607,13 +4565,13 @@ Li:根节点到第i个外部叶子节点的距离。
 
 
 
-这个问题其实是一个经典的 **最优二叉树** 构造问题，也叫做 **霍夫曼编码（Huffman Coding）**。我们要构造一棵 **扩充二叉树**（即每个非叶子节点都有两个子节点），使得所有 **叶子节点的带权路径长度和最小**。
+这个问题其实是一个经典的 **最优二叉树** 构造问题，也叫做 **霍夫曼编码（Huffman Coding）**。要构造一棵 **扩充二叉树**（即每个非叶子节点都有两个子节点），使得所有 **叶子节点的带权路径长度和最小**。
 
 ---
 
 ✅ 思路简述（霍夫曼算法）：
 
-我们通过以下贪心策略构造一棵最优二叉树：
+通过以下贪心策略构造一棵最优二叉树：
 
 1. 将所有权值作为初始节点，放入一个最小堆中。
 2. 重复执行以下操作直到只剩一个节点：
@@ -4906,7 +4864,7 @@ WPL = 12 + 16 + 20 + 24 + 27 + 24 + 22 + 24 = 169
 
 ## 5 利用二叉堆实现优先级队列
 
-我们学习过队列这一先进先出的数据结构。队列有一个重要的变体，叫作优先级队列。和队列一样，优先级队列从头部移除元素，不过元素的逻辑顺序是由优先级决定的。优先级最高的元素在最前，优先级最低的元素在最后。因此，当一个元素入队时，它可能直接被移到优先级队列的头部。后续学习图相关内容时会看到，<mark>对于一些图算法来说，优先级队列是一个有用的数据结构</mark>。
+我们学习过队列这一先进先出的数据结构。队列有一个重要的变体，叫作优先级队列。<mark>和队列一样，优先级队列从头部移除元素，不过元素的逻辑顺序是由优先级决定的</mark>。优先级最高的元素在最前，优先级最低的元素在最后。因此，当一个元素入队时，它可能直接被移到优先级队列的头部。后续学习图相关内容时会看到，<mark>对于一些图算法来说，优先级队列是一个有用的数据结构</mark>。
 
 你或许可以想到一些使用排序函数和列表实现优先级队列的简单方法。但是，就时间复杂度而言，列表的插入操作是 O(n) ，排序操作是 $O(n\log n)$ 。其实，效率可以更高。实现优先级队列的经典方法是使用叫作二叉堆的数据结构。<mark>二叉堆的入队操作和出队操作均可达到 $O(\log n) $</mark>。
 
@@ -4924,7 +4882,7 @@ WPL = 12 + 16 + 20 + 24 + 27 + 24 + 22 + 24 = 169
 
 
 
-完全二叉树的另一个有趣之处在于，<mark>可以用一个列表来表示它</mark>，而不需要采用“列表之列表”或“节点与引用”表示法。由于树是完全的，因此对于在列表中处于位置 p 的节点来说，它的左子节点正好处于位置 2p+1；同理，右子节点处于位置 2p+2。若要找到树中任意节点的父节点，只需使用 Python 的整数除法即可。给定列表中位置 n 处的节点，其父节点的位置就是 (n-1)//2。图 2 展示了一棵完全二叉树，并给出了列表表示。<mark>树的列表表示</mark>——加上这个“完全”的结构性质——让我们得以通过一些简单的数学运算遍历完全二叉树。我们会看到，这也有助于高效地实现二叉堆。
+完全二叉树的另一个有趣之处在于，<mark>可以用一个列表来表示它</mark>，而不需要采用“列表之列表”或“节点与引用”表示法。由于树是完全的，因此对于在列表中处于位置 p 的节点来说，它的左子节点正好处于位置 2p+1；同理，右子节点处于位置 2p+2。若要找到树中任意节点的父节点，只需使用 Python 的整数除法即可。给定列表中位置 n 处的节点，其父节点的位置就是 (n-1)//2。图 2 展示了一棵完全二叉树，并给出了列表表示。<mark>树的列表表示</mark>——加上这个“完全”的结构性质——让我们得以通过一些简单的数学运算遍历完全二叉树。会看到，这也有助于高效地实现二叉堆。
 
 ![image](https://runestone.academy/ns/books/published/pythonds3/_images/heapOrder.png)
 
@@ -4938,7 +4896,7 @@ WPL = 12 + 16 + 20 + 24 + 27 + 24 + 22 + 24 = 169
 
 3. 堆操作
 
-首先实现二叉堆的构造方法。既然用一个列表就可以表示整个二叉堆，那么构造方法要做的就是初始化这个列表。列表 heapList 的第一个元素是 0，它的唯一用途是为了使后续的方法可以使用整数除法。
+首先实现二叉堆的构造方法。既然用一个列表就可以表示整个二叉堆，那么构造方法要做的就是初始化这个列表。
 
 ```python
 class BinaryHeap:
@@ -4946,13 +4904,13 @@ class BinaryHeap:
         self._heap = []
 ```
 
-接下来实现insert方法。将元素加入列表的最简单、最高效的方法就是将元素追加到列表的末尾。追加操作的优点在于，它能保证完全树的性质，但缺点是很可能会破坏堆的结构性质。不过可以写一个方法，通过比较新元素与其父元素来重新获得堆的结构性质。如果新元素小于其父元素，就将二者交换。图3展示了将新元素放到正确位置上所需的一系列交换操作。
+接下来实现insert方法。将元素加入列表的最简单、最高效的方法就是将元素追加到列表的末尾。追加操作的优点在于，它能保证完全树的性质，但缺点是很可能会破坏堆的结构性质。不过可以写一个方法，通过比较新元素与其父元素来重新获得堆的有序性。如果新元素小于其父元素，就将二者交换。图3展示了将新元素放到正确位置上所需的一系列交换操作。
 
 <img src="https://raw.githubusercontent.com/GMyhf/img/main/img/percUp.png" alt="image" style="zoom:67%;" />
 
 <center>图3 将新元素往上移到正确位置 Percolate the New Node up to Its Proper Position</center>
 
-注意，将元素往上移时，其实是在新元素及其父元素之间重建堆的结构性质。此外，也保留了兄弟元素之间的堆性质。当然，如果新元素很小，需要继续往上一层交换。代码清单2给出了`_perc_up`方法的代码，该方法将元素一直沿着树向上移动，直到重获堆的结构性质。我们使用整数除法计算任意节点的父节点。就当前节点而言，父节点的下标就是(当前节点的下标-1)除以2。
+注意，将元素往上移时，其实是在新元素及其父元素之间重建堆的性质。此外，也保留了兄弟元素之间的堆性质。当然，如果新元素很小，需要继续往上一层交换。代码清单2给出了`_perc_up`方法的代码，该方法将元素一直沿着树向上移动，直到重获堆的性质。我们使用整数除法计算任意节点的父节点。就当前节点而言，父节点的下标就是(当前节点的下标-1)除以2。
 
 代码清单2 
 
@@ -4999,7 +4957,7 @@ def insert(self, item):
 
 <center>图4 Percolating the Root Node down the Tree</center>
 
-为了维护堆的顺序性质，我们需要做的就是将根节点与其小于根节点的较小子节点交换。在最初的交换之后，我们可能会重复这一交换过程，涉及某个节点及其子节点，直到该节点被交换到树中的某个位置，在这个位置上它已经小于其两个子节点。向下渗透节点的代码可以在清单4中的 `_perc_down` 和 `_get_min_child` 方法中找到。
+为了维护堆的顺序性质，需要做的就是将根节点与其小于根节点的较小子节点交换。在最初的交换之后，可能会重复这一交换过程，涉及某个节点及其子节点，直到该节点被交换到树中的某个位置，在这个位置上它已经小于其两个子节点。向下渗透节点的代码可以在清单4中的 `_perc_down` 和 `_get_min_child` 方法中找到。
 
 代码清单4
 
@@ -5040,7 +4998,7 @@ def delete(self):
 
 
 
-为了结束我们对二叉堆的讨论，我们将探讨一种从键值列表构建整个堆的方法。你可能首先想到的方法如下：给定一个键值列表，你可以通过逐个插入每个键来轻松构建一个堆。由于你从一个空列表开始，它是有序的，因此可以使用二分查找以大约 $ O(\log n) $ 的操作代价找到插入下一个键的正确位置。然而，要记住，在列表中间插入一个元素可能需要 $ O(n) $ 操作来移动列表中的其余元素，以为新键腾出空间。因此，将所有键插入堆中总共需要 $ O(n \log n) $ 操作。但是，如果我们从一个完整的列表开始，那么我们可以在 $ O(n) $ 操作内构建整个堆。清单6展示了构建整个堆的代码。
+为了结束我们对二叉堆的讨论，我们将探讨一种从键值列表构建整个堆的方法。你可能首先想到的方法如下：给定一个键值列表，可以通过逐个插入每个键来轻松构建一个堆。由于从一个空列表开始，它是有序的，因此可以使用二分查找以大约 $ O(\log n) $ 的操作代价找到插入下一个键的正确位置。然而，要记住，在列表中间插入一个元素可能需要 $O(n)$ 操作来移动列表中的其余元素，以为新键腾出空间。因此，将所有键插入堆中总共需要 $ O(n \log n) $ 操作。但是，<mark>如果从一个完整的列表开始，那么我们可以在 $O(n)$ 操作内构建整个堆</mark>。清单6展示了构建整个堆的代码。
 
 > 如果从完整的列表开始，构建整个堆只需O(n) ，https://oi-wiki.org/ds/binary-heap/ 有证明。
 >
@@ -5059,7 +5017,7 @@ def delete(self):
 
 
 
-图5展示了buildHeap方法进行的交换过程，它将各节点从最初状态移到各自的正确位置上。尽管从树的中间开始，向根的方向操作，但是percDown方法保证了最大的节点总是沿着树向下移动。<u>在这棵完全二叉树中，超过中点的节点都是叶子节点，没有任何子节点</u>。当i = 1时，从树的根节点往下移，可能需要经过多次交换。如你所见，9先被移出根节点，然后percDown会沿着树检查子节点，以确保尽量将它往下移。在本例中，9的第2次交换对象是3。这样一来，9就移到了树的底层，不需要再做交换了。比较一系列交换操作后的列表表示将有助于理解，如图5所示。
+图5展示了buildHeap方法进行的交换过程，它将各节点从最初状态移到各自的正确位置上。尽管从树的中间开始，向根的方向操作，但是`_perc_down`方法保证了最大的节点总是沿着树向下移动。<u>在这棵完全二叉树中，超过中点的节点都是叶子节点，没有任何子节点</u>。当i = 1时，从树的根节点往下移，可能需要经过多次交换。如你所见，9先被移出根节点，然后`perc_down`会沿着树检查子节点，以确保尽量将它往下移。在本例中，9的第2次交换对象是3。这样一来，9就移到了树的底层，不需要再做交换了。比较一系列交换操作后的列表表示（打印出来`print(f'i = {i}, {self._heap}')`）将有助于理解，如图5所示。
 
 <img src="https://raw.githubusercontent.com/GMyhf/img/main/img/buildheap.png" alt="image" style="zoom:67%;" />
 
@@ -5378,7 +5336,7 @@ print(*ans)
 
 #### E18164: 剪绳子
 
-greedy/huffman, http://cs101.openjudge.cn/practice/18164/
+greedy, huffman, http://cs101.openjudge.cn/pctbook/M18164/
 
 小张要将一根长度为L的绳子剪成N段。准备剪的绳子的长度为L1,L2,L3...,LN，未剪的绳子长度恰好为剪后所有绳子长度的和。 
 
@@ -5419,7 +5377,7 @@ greedy/huffman, http://cs101.openjudge.cn/practice/18164/
 
 与 05333: Fence Repair 一样。http://cs101.openjudge.cn/practice/05333
 
-思路： 剪绳子，实际上是 Huffman编码/树，https://zhuanlan.zhihu.com/p/42238580
+思路： 剪绳子，实际上是 Huffman编码，https://zhuanlan.zhihu.com/p/42238580
 
 ```python
 # OJ18164
@@ -5950,18 +5908,18 @@ if __name__ == "__main__":
 
 
 
-The problem is asking to construct a binary search tree (BST) from a sequence of numbers and then perform a level order traversal (also known as breadth-first search) on the BST.
+问题是要求根据一串数字构建一棵二叉搜索树（BST），然后对这棵二叉搜索树进行层序遍历（也称为广度优先搜索）。
 
-Here is a step-by-step plan:
+以下是分步计划：
 
-1. Create a TreeNode class to represent each node in the tree.
-2. Create a function `insert` that takes a node and a value as input and inserts the value into the BST rooted at the node.
-3. Create a function `level_order_traversal` that takes the root of the tree as input and returns the level order traversal of the tree.
-   - Use a queue to store the nodes to be visited.
-   - While the queue is not empty, dequeue a node, visit it, and enqueue its children.
-4. Read the sequence of numbers from the input, construct the BST, perform the level order traversal, and output the result.
+1. 创建一个 `TreeNode` 类来表示树中的每个节点。
+2. 创建一个 `insert` 函数，该函数接收一个节点和一个值作为输入，并将该值插入到以该节点为根的二叉搜索树中。
+3. 创建一个 `level_order_traversal` 函数，该函数接收树的根节点作为输入，并返回树的层序遍历结果。
+   - 使用一个队列来存储待访问的节点。
+   - 当队列不为空时，从队列中取出一个节点，访问它，并将其子节点加入队列。
+4. 读取输入的数字序列，构建二叉搜索树，执行层序遍历，并输出结果。
 
-Here is the Python code that implements this plan:
+以下是实现此计划的 Python 代码：
 
 ```python
 class TreeNode:
@@ -6446,7 +6404,7 @@ h = 1.44 \log{N_h}\end{split}$​​​​
 
 #### 8.2.1 编程题目
 
-##### 晴问9.5: 平衡二叉树的建立
+##### M晴问9.5: 平衡二叉树的建立
 
 https://sunnywhy.com/sfbj/9/5/359
 
@@ -6488,7 +6446,7 @@ https://sunnywhy.com/sfbj/9/5/359
 To solve this problem, you can follow these steps:
 
 1. Read the input sequence.
-2. Insert the values into an AVL tree. An AVL tree is a self-balancing binary search tree, and the heights of the two child subtrees of any node differ by at most one.
+2. Insert the values into an AVL tree. <mark>An AVL tree is a self-balancing binary search tree, and the heights of the two child subtrees of any node differ by at most one</mark>.
 3. Perform a preorder traversal of the AVL tree and print the result.
 
 Here is the Python code that implements this plan:
@@ -6808,7 +6766,7 @@ https://www.geeksforgeeks.org/introduction-to-disjoint-set-data-structure-or-uni
 
 **树：** 它是一个**不相交集**。如果两个元素位于同一棵树中，则它们位于同一个**不相交集**中。每棵树的根节点（或最顶部的节点）被称为该集合的**代表**。每个集合总是有一个唯一的代表。识别代表的一个简单规则是，如果‘i’是某个集合的代表，则**Parent[i] = i**。如果‘i’不是他所在集合的代表，则可以通过沿树向上遍历直到找到代表为止。
 
-这种结构允许有效地执行诸如合并集合和查找代表等操作，适用于需要动态管理分组的问题，如社交网络中的朋友关系追踪。通过这种方式，可以快速判断两个人是否是朋友（直接或间接），即使这个关系链可能很长。
+<mark>这种结构允许有效地执行诸如合并集合和查找代表等操作</mark>，适用于需要动态管理分组的问题，如社交网络中的朋友关系追踪。通过这种方式，可以快速判断两个人是否是朋友（直接或间接），即使这个关系链可能很长。
 
 > **Data Structures used are:** 
 >
