--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1,6 +1,6 @@
 # Week7~10 🌲算
 
-Updated 0001 GMT+8 1108, 2025
+Updated 1501 GMT+8 1108, 2025
 
 2025 spring, Complied by Hongfei Yan
 
@@ -2145,43 +2145,68 @@ file2
 翻译自 Pacific Northwest 1998 的试题
 
 
+标准的 DFS 树结构构建 + 递归打印的写法。
 
 ```python
-# 夏天明，元培学院
-from sys import exit
-
-class dir:
-    def __init__(self, dname):
-        self.name = dname
+class Node:
+    __slots__ = ('name', 'dirs', 'files')
+    def __init__(self, name):
+        self.name = name
         self.dirs = []
         self.files = []
-    
-    def getGraph(self):
-        g = [self.name]
-        for d in self.dirs:
-            subg = d.getGraph()
-            g.extend(["|     " + s for s in subg])
-        for f in sorted(self.files):
-            g.append(f)
-        return g
 
-n = 0
-while True:
-    n += 1
-    stack = [dir("ROOT")]
-    while (s := input()) != "*":
-        if s == "#": exit(0)
-        if s[0] == 'f':
+def print_tree(node, depth=0):
+    prefix = '|     ' * depth
+    print(prefix + node.name)
+    for d in node.dirs:               # 子目录按出现顺序
+        print_tree(d, depth + 1)
+    for f in sorted(node.files):      # 文件按字母序
+        print(prefix + f)
+
+def parse_dataset(lines):
+    root = Node('ROOT')
+    stack = [root]
+    for s in lines:
+        if s[0] == 'd':               # 目录
+            new_dir = Node(s)
+            stack[-1].dirs.append(new_dir)
+            stack.append(new_dir)
+        elif s[0] == 'f':             # 文件
             stack[-1].files.append(s)
-        elif s[0] == 'd':
-            stack.append(dir(s))
-            stack[-2].dirs.append(stack[-1])
-        else:
+        elif s == ']':                # 目录结束
             stack.pop()
-    print(f"DATA SET {n}:")
-    print(*stack[0].getGraph(), sep='\n')
-    print()
+    return root
+
+def main():
+    datasets, current = [], []
+    while True:
+        try:
+            s = input().strip()
+        except EOFError:
+            break
+        if s == '#':
+            if current:
+                datasets.append(current)
+            break
+        elif s == '*':
+            datasets.append(current)
+            current = []
+        else:
+            current.append(s)
+
+    for i, data in enumerate(datasets, 1):
+        print(f'DATA SET {i}:')
+        print_tree(parse_dataset(data))
+        print()
+
+if __name__ == "__main__":
+    main()
 ```
+
+**更轻量的类定义**
+    
+    - 使用 `__slots__` 节省内存，避免动态属性创建。
+
 
 
 
