--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1915,6 +1915,100 @@ print("\n".join(results))  # 按格式输出
 ```
 
 
+优化后的版本（支持无括号单节点、自动跳过空树、递归清晰且无多余判断）。
+**优化思路**
+
+1. **字符流式解析**  
+    不再多次切片字符串，而是用一个**指针（索引）**在字符串中递归推进。  
+    这样可以避免反复创建子串（`O(n²)` → `O(n)`），在长输入下效率明显提升。
+    
+2. **结构清晰化**  
+    将解析逻辑封装成 `parse()` 内嵌函数（带索引控制），更直观。
+    
+3. **遍历统一处理**  
+    避免递归时频繁拼接字符串，用 `list` 收集结果后 `''.join()` 输出，更快。
+    
+4. **容错改进**  
+    自动忽略右子树缺省、星号、空括号等特殊情况。
+    
+
+**优化版代码**（精简高效 + O(n) 解析）
+
+```python
+class TreeNode:
+    __slots__ = ("val", "left", "right")
+    def __init__(self, val):
+        self.val = val
+        self.left = None
+        self.right = None
+
+
+def parse_tree(s):
+    """将括号嵌套形式解析为二叉树，使用流式指针解析避免重复切片"""
+    i = 0
+    n = len(s)
+
+    def parse():
+        nonlocal i
+        if i >= n or s[i] == '*':
+            i += 1  # 跳过空树符号
+            return None
+
+        node = TreeNode(s[i])
+        i += 1
+
+        if i < n and s[i] == '(':
+            i += 1  # 跳过 '('
+            node.left = parse()  # 左子树
+            if i < n and s[i] == ',':
+                i += 1  # 跳过 ','
+                node.right = parse()  # 右子树
+            if i < n and s[i] == ')':
+                i += 1  # 跳过 ')'
+        return node
+
+    return parse()
+
+
+def preorder(root):
+    res = []
+    def dfs(node):
+        if not node: return
+        res.append(node.val)
+        dfs(node.left)
+        dfs(node.right)
+    dfs(root)
+    return ''.join(res)
+
+
+def inorder(root):
+    res = []
+    def dfs(node):
+        if not node: return
+        dfs(node.left)
+        res.append(node.val)
+        dfs(node.right)
+    dfs(root)
+    return ''.join(res)
+
+
+# 主程序
+if __name__ == "__main__":
+    n = int(input().strip())
+    for _ in range(n):
+        s = input().strip().replace(" ", "")
+        tree = parse_tree(s)
+        print(preorder(tree))
+        print(inorder(tree))
+```
+**优点总结**
+
+| 优化项   | 原实现         | 优化后                       |
+| ----- | ----------- | ------------------------- |
+| 解析复杂度 | O(n²)（切片多次） | O(n)（指针推进）                |
+| 递归逻辑  | 需要查找逗号、维护栈  | 自动语法驱动，简洁直观               |
+| 拼接性能  | 字符串相加       | `list.append + ''.join()` |
+| 可读性   | 多层嵌套逻辑      | 层次清晰、容易扩展                 |
 
 
 
