--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -2308,7 +2308,7 @@ if __name__ == "__main__":
 
 ### 2.5 邻接表表示法
 
-邻接表表示法（Adjacency List Representation）是一种常见的树的表示方法，特别<mark>适用于表示稀疏树</mark>（树中节点的度数相对较小）。
+邻接表表示法（Adjacency List Representation）是一种常见的树的表示方法，特别<mark>适用于表示稀疏树</mark>（树中节点的度数相对较小）。<mark>适用于多叉树</mark>。
 
 在邻接表表示法中，<mark>使用一个数组来存储树的节点，数组中的每个元素对应一个节点。对于每个节点，使用链表或数组等数据结构来存储它的子节点。</mark>
 
