--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -4014,6 +4014,36 @@ print(printexp(pt))
 
 #### 4.2.3 编程题目
 
+“抽象结构还原—遍历—输出规约”；关键在于先从题面抽出可验证的不变量（父子出现顺序、括号文法、目录与文件的层级与排序、BST 的区间收敛），再用最小而稳定的模板承载它们：用指针推进和栈完成结构构建，用递归把状态沿路径精准传递（如路径数的十进制累积），用局部排序与稳定顺序控制输出；每次编码都先画出数据流与控制流，明确“递归终止—状态转移—输出时机”的三件事，这比单纯背模板更可靠也更可迁移。
+
+> [!NOTE]
+> **M07161: 森林的带度数层次序列存储**
+> 
+> tree, [http://cs101.openjudge.cn/practice/07161/](http://cs101.openjudge.cn/practice/07161/)
+> 
+> M27928: 遍历树
+> 
+> adjacency list, dfs, [http://cs101.openjudge.cn/practice/27928/](http://cs101.openjudge.cn/practice/27928/)
+> 
+> 思路：重点是根结点的求取
+> 
+> **M129.求根节点到叶节点数字之和**
+> 
+> dfs, [https://leetcode.cn/problems/sum-root-to-leaf-numbers/](https://leetcode.cn/problems/sum-root-to-leaf-numbers/)
+> 
+> 思路：不断扩充，✖️10+新的个位数字
+> 
+> **M24729: 括号嵌套树**
+> 
+> dfs, stack, [http://cs101.openjudge.cn/practice/24729/](http://cs101.openjudge.cn/practice/24729/)
+> 
+> 思路：使用之前的括号策略，把第一个字母作为根，之后如果有父节点，加入stack，当括号结束后再移出stack。然后形成节点树。使用dfs输出preorder和postorder的序列结果。
+> 
+> **T02775: 文件结构“图”**
+> 
+> tree, [http://cs101.openjudge.cn/practice/02775/](http://cs101.openjudge.cn/practice/02775/)
+> 
+> 思路：要特别区别区分directions和files的差别化处理，本题特别复杂，先生成树，再进行输出，files要按照排列顺序，directions按照按照目录出现的先后显示。
 
 
 ##### 练习M105.从前序与中序遍历序列构造二叉树
