--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -2239,6 +2239,8 @@ file2
 翻译自 Pacific Northwest 1998 的试题
 
 
+比较复杂的一道题目，首先是输入数据的处理就比较困难，需要先全部存储到tests中再逐行处理。构建文件树的过程中，需要一个stack存储待处理的目录，遇到 “ ] ” 就弹出栈顶取出下一 个待处理目录，file直接存入当前目录，<mark>dir则存入当前目录的同时压入栈中</mark>。<mark>输出时，则需要 记录当前层数</mark>，按照层数输出前缀，并且目录理论上比文件要更深一层。
+
 标准的 DFS 树结构构建 + 递归打印的写法。
 
 ```python
