--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -2415,9 +2415,9 @@ G: []
 matrices, https://cs101.openjudge.cn/pctbook/E23555/
 
 
-#### 练习07161: 森林的带度数层次序列存储
+#### 练习M07161: 森林的带度数层次序列存储
 
-http://cs101.openjudge.cn/dsapre/07161/
+dfs + bfs, http://cs101.openjudge.cn/practice/07161/
 
 对于树和森林等非线性结构，我们往往需要将其序列化以便存储。有一种树的存储方式称为带度数的层次序列。我们可以通过层次遍历的方式将森林序列转化为多个带度数的层次序列。
 
@@ -2464,7 +2464,7 @@ K H J E F G C X I D
 
 
 
-
+07161: 森林的带度数层次序列存储 是 DFS + BFS 结合的题目。
 利用队列根据“带度数的层次序列”构造树，然后进行后根遍历。代码如下：
 
 ```python
