--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -1,6 +1,6 @@
 # Week7~10 🌲算
 
-Updated 1501 GMT+8 1108, 2025
+Updated 2207 GMT+8 1108, 2025
 
 2025 spring, Complied by Hongfei Yan
 
@@ -3096,15 +3096,15 @@ Auxiliary Space: O(n)
 
 ## 3 树的基本性质
 
-### 3.1 $ m $-叉树的性质
+### 3.1 $m$-叉树的性质
 
-1. **<mark>总结点数</mark>**：设树中总的结点数为 $ N $，则：
+1. **<mark>总结点数</mark>**：设树中总的结点数为 $N$，则：
    $$
    N = N_0 + N_1 + N_2 + \dots + N_m
    $$
-   其中 $ N_0 $ 表示度数为 0 的结点数（即叶结点），$ N_1, N_2, \dots, N_m $ 分别表示度数为 1, 2, ..., $ m $ 的结点数。
+   其中 $N_0$ 表示度数为 0 的结点数（即叶结点），$N_1, N_2, \dots, N_m$ 分别表示度数为 1, 2, ..., $m$ 的结点数。
 
-2. **<mark>总分支数</mark>**：在树中，每个度数为 $ k $ 的结点贡献了 $ k $ 条分支。因此，树中的总分支数可以表示为：
+2. **<mark>总分支数</mark>**：在树中，每个度数为 $k$ 的结点贡献了 $ k $ 条分支。因此，树中的总分支数可以表示为：
    $$
    \text{总分支数} = 1 \cdot N_1 + 2 \cdot N_2 + \dots + m \cdot N_m
    $$
@@ -3114,7 +3114,7 @@ Auxiliary Space: O(n)
    \text{总分支数} = N - 1
    $$
 
-> 将以上关系结合起来，可以得到关于 $ N_0 $ 的方程。
+> 将以上关系结合起来，可以得到关于 $N_0$ 的方程。
 
 
 
@@ -6315,6 +6315,15 @@ $balance Factor = height (left SubTree) - height(right SubTree)$
 ![../_images/unbalanced.png](https://raw.githubusercontent.com/GMyhf/img/main/img/unbalanced.png)
 
 <center>图1 带平衡因子的右倾树</center>
+
+
+> [!NOTE] 
+> 108.将有序数组转换为二叉搜索树
+> https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/
+> 给你一个整数数组 `nums` ，其中元素已经按 **升序** 排列，请你将其转换为一棵 平衡二叉搜索树。
+> 平衡二叉树是指该树所有节点的左右子树的高度相差不超过1.
+
+
 
 ### 8.1 AVL树的性能
 
