--- a/20251020_week7-10_tree.md
+++ b/20251020_week7-10_tree.md
@@ -510,7 +510,7 @@ graph TD
 >
 > 
 > 
->LC104.二叉树的最大深度，https://leetcode.cn/problems/maximum-depth-of-binary-tree/
+>M104.二叉树的最大深度，https://leetcode.cn/problems/maximum-depth-of-binary-tree/
 > 
 >给定一个二叉树 `root` ，返回其最大深度。
 > 
@@ -537,7 +537,7 @@ graph TD
 
 
 
-**定义二：**一棵树要么为空，要么由一个根节点和零棵或多棵子树构成，子树本身也是一棵树。每棵子树的根节点通过一条边连到父树的根节点。图3展示了树的递归定义。从树的递归定义可知，图中的树至少有4个节点，因为三角形代表的子树必定有一个根节点。这棵树或许有更多的节点，但必须更深入地查看子树后才能确定。
+**定义二**：一棵树要么为空，要么由一个根节点和零棵或多棵子树构成，子树本身也是一棵树。每棵子树的根节点通过一条边连到父树的根节点。图3展示了树的递归定义。从树的递归定义可知，图中的树至少有4个节点，因为三角形代表的子树必定有一个根节点。这棵树或许有更多的节点，但必须更深入地查看子树后才能确定。
 
 ![image](https://raw.githubusercontent.com/GMyhf/img/main/img/TreeDefRecursive.png)
 
@@ -3145,7 +3145,7 @@ Auxiliary Space: O(n)
 >    1 \cdot N_1 + 2 \cdot N_2 + \dots + m \cdot N_m = N - 1
 >    $$
 >
-> 2. 将 $ N = N_0 + N_1 + N_2 + \dots + N_m $ 代入上式：
+> 2. 将 $N = N_0 + N_1 + N_2 + \dots + N_m$ 代入上式：
 >    $$
 >    1 \cdot N_1 + 2 \cdot N_2 + \dots + m \cdot N_m = (N_0 + N_1 + N_2 + \dots + N_m) - 1
 >    $$
@@ -3164,15 +3164,15 @@ Auxiliary Space: O(n)
 >
 > **最终公式**
 >
-> 一棵 $ m $-叉树中，叶结点的数量 $ N_0 $ 可以表示为：
+> 一棵 $m$-叉树中，叶结点的数量 $N_0$ 可以表示为：
 > $$
 > N_0 = 1 + \sum_{k=1}^m (k - 1) N_k
 > $$
 >
 > 其中：
 >
-> - $ N_k $ 是度数为 $ k $ 的结点数；
-> - $ k - 1 $ 表示每个度数为 $ k $ 的结点对叶结点数量的贡献。
+> - $N_k$ 是度数为 $k$ 的结点数；
+> - $k - 1$ 表示每个度数为 $k$ 的结点对叶结点数量的贡献。
 
 
 
@@ -5265,7 +5265,7 @@ def delete(self):
 
 
 
-为了结束我们对二叉堆的讨论，我们将探讨一种从键值列表构建整个堆的方法。你可能首先想到的方法如下：给定一个键值列表，可以通过逐个插入每个键来轻松构建一个堆。由于从一个空列表开始，它是有序的，因此可以使用二分查找以大约 $ O(\log n) $ 的操作代价找到插入下一个键的正确位置。然而，要记住，在列表中间插入一个元素可能需要 $O(n)$ 操作来移动列表中的其余元素，以为新键腾出空间。因此，将所有键插入堆中总共需要 $ O(n \log n) $ 操作。但是，<mark>如果从一个完整的列表开始，那么我们可以在 $O(n)$ 操作内构建整个堆</mark>。清单6展示了构建整个堆的代码。
+为了结束我们对二叉堆的讨论，我们将探讨一种从键值列表构建整个堆的方法。你可能首先想到的方法如下：给定一个键值列表，可以通过逐个插入每个键来轻松构建一个堆。由于从一个空列表开始，它是有序的，因此可以使用二分查找以大约 $O(\log n)$ 的操作代价找到插入下一个键的正确位置。然而，要记住，在列表中间插入一个元素可能需要 $O(n)$ 操作来移动列表中的其余元素，以为新键腾出空间。因此，将所有键插入堆中总共需要 $O(n \log n)$ 操作。但是，<mark>如果从一个完整的列表开始，那么我们可以在 $O(n)$ 操作内构建整个堆</mark>。清单6展示了构建整个堆的代码。
 
 > 如果从完整的列表开始，构建整个堆只需O(n) ，https://oi-wiki.org/ds/binary-heap/ 有证明。
 >
@@ -6543,11 +6543,11 @@ F_i = F_{i-1} + F_{i-2}  \text{ for all } i \ge 2\end{split}$​
 >
 > 
 
-$\begin{split} N_0 = 1 \\
+$$\begin{aligned} N_0 = 1 \\
 N_1 = 2 \quad F_3 = 3 \\
 N_2 = 4 \quad F_4 = 5 \\
 N_3 = 7 \quad F_5 = 8 
-\end{split}$
+\end{aligned}$$
 
 
 
@@ -6561,9 +6561,7 @@ $N_h = \frac{\Phi^{h+2}}{\sqrt{5}} - 1$
 
 移项，两边以2为底取对数，求h，得到：
 
-$\begin{split}\log{(N_h+1)} = (h+2)\log{\Phi} - \frac{1}{2} \log{5} \\
-h = \frac{\log{(N_h+1)} - 2 \log{\Phi} + \frac{1}{2} \log{5}}{\log{\Phi}} \\
-h = 1.44 \log{N_h}\end{split}$​​​​
+$$ \begin{aligned} \log{(N_h+1)} &= (h+2)\log{\Phi} - \frac{1}{2} \log{5} \\ h &= \frac{\log{(N_h+1)} - 2 \log{\Phi} + \frac{1}{2} \log{5}}{\log{\Phi}} \\ h &\approx 1.44 \log{N_h} \end{aligned} $$
 
 在任何时间，<mark>AVL树的高度都等于节点数取对数再乘以一个常数（1.44）</mark>。对于搜索AVL树来说，这是一件好事，因为时间复杂度被限制为$O(\log{N})$​。
 
@@ -6971,8 +6969,8 @@ https://www.geeksforgeeks.org/introduction-to-disjoint-set-data-structure-or-uni
 一种存储非重叠或不相交子集的数据结构被称为**不相交集合数据结构**（Disjoint Set Data Structure）。不相交集合数据结构支持以下操作：
 
 - 向不相交集合中**添加新集合**。
-- 使用**Union（合并）**操作将不相交集合合并为一个集合。
-- 使用**Find（查找）**操作找到不相交集合的代表元素。
+- 使用**Union**（合并）操作将不相交集合合并为一个集合。
+- 使用**Find**（查找）操作找到不相交集合的代表元素。
 - 检查两个集合是否为不相交。
 
 考虑一个包含若干人的情景，并需要对他们执行以下任务：
@@ -7106,7 +7104,7 @@ def find(i):
 
 #### 9.1.2 Union 
 
-它接受**两个元素**作为输入，使用**Find（查找）**操作找到它们所在集合的代表，最后将其中一棵树（代表一个集合）置于另一棵树的根节点之下。
+它接受**两个元素**作为输入，使用**Find**（查找）操作找到它们所在集合的代表，最后将其中一棵树（代表一个集合）置于另一棵树的根节点之下。
 
 > It takes **two elements** as input and finds the representatives of their sets using the **Find** operation, and finally puts either one of the trees (representing the set) under the root node of the other tree.
 
