--- a/20251117_week11-14_graph.md
+++ b/20251117_week11-14_graph.md
@@ -3713,7 +3713,7 @@ print(path)
 > Page 612, introduction to algorithms 3rd Edition
 >
 > This section shows how we can use depth-first search to perform a topological sort of a directed acyclic graph, or a “dag” as it is sometimes called. A **topological sort** of a dag G = ( V, E ) is a linear ordering of all its vertices such that if G contains an edge (u, v), then u appears before  in the ordering. (If the graph contains a cycle, then no linear ordering is possible.) We can view a topological sort of a graph as an ordering of its vertices along a horizontal line so that all directed edges go from left to right. Topological sorting is thus different from the usual kind of “sorting”.
-> Many applications use <mark>directed acyclic graphs</mark> to indicate precedences amongevents.
+> Many applications use <mark>directed acyclic graphs</mark> to indicate precedences among events.
 
 为了展示计算机科学家可以<mark>将几乎所有问题都转换成图问题</mark>，让我们来考虑如何制作一批松饼。配方十分简单：一个鸡蛋、一杯松饼粉、一勺油，以及3/4杯牛奶。为了制作松饼，需要加热平底锅，并将所有原材料混合后倒入锅中。当出现气泡时，将松饼翻面，继续煎至底部变成金黄色。在享用松饼之前，还会加热一些枫糖浆。图7-18用图的形式展示了整个过程。
 
@@ -3909,10 +3909,9 @@ print(topo_order)
 """
 Output:
 函数 topologicalSort 中的调试信息
-[('eat_pancake', 18), ('heat_syrup', 16), ('turn_pancake', 14), ('pour_cup', 12), ('cup_mix', 10), ('cup_milk', 8), ('heat_griddle', 6), ('tbl_oil', 4), ('egg', 2)]
-
+[('heat_griddle', 18), ('tbl_oil', 16), ('egg', 14), ('cup_milk', 12), ('mix_ingredients', 11), ('heat_syrup', 10), ('pour_batter', 8), ('turn_pancake', 7), ('eat_pancake', 6)]
 Topological Sort of the Pancake Making Process:
-['heat_griddle', 'tbl_oil', 'egg', 'cup_milk', 'cup_mix', 'heat_syrup', 'pour_cup', 'turn_pancake', 'eat_pancake']
+['heat_griddle', 'tbl_oil', 'egg', 'cup_milk', 'mix_ingredients', 'heat_syrup', 'pour_batter', 'turn_pancake', 'eat_pancake']
 """
 ```
 
@@ -4069,7 +4068,7 @@ Topological sort order: ['cup_milk', 'heat_griddle', 'tbl_oil', 'egg', 'mix_ingr
 
 
 
-#### 4.1.5 判断无向图、又向图是否有环
+#### 4.1.5 判断无向图、有向图是否有环
 
 判断**图中是否存在环**（即“图中是否存在回路”）的问题，根据图是**无向图**还是**有向图**，使用的算法略有不同。下面分别介绍常用的算法：
 
